# esp32_event_clean_arch

./: .dockerignore  .env  .gitignore  Doxyfile  PR5.patch  README.md
Docker/: Dockerfile  Dockerfile.idf  Dockerfile.idf-5.5  Dockerfile.idf-5.5.1
docs/: README.md
firmware/: .clang-format  .editorconfig  Doxyfile
firmware/cmake/: strict_warnings.cmake
firmware/components/app__demo_lcd/: CMakeLists.txt  Kconfig  app_demo_lcd.c
firmware/components/app__demo_lcd/include/: app_demo_lcd.h
firmware/components/app__log_bus/: CMakeLists.txt  app_log_bus.c
firmware/components/app__log_bus/include/: app_log_bus.h
firmware/components/core__ev/: CMakeLists.txt  Doxyfile.in  Kconfig  core_ev.c
firmware/components/core__ev/include/: core_ev.h  core_ev_schema.h
firmware/components/core__ev/test/: CMakeLists.txt  test_ev_post_lease.c  test_ev_qos_replace_last.c
firmware/components/core__leasepool/: CMakeLists.txt  Kconfig  leasepool.c
firmware/components/core__leasepool/include/core/: leasepool.h
firmware/components/core__spsc_ring/: CMakeLists.txt  spsc_ring.c
firmware/components/core__spsc_ring/include/core/: spsc_ring.h
firmware/components/drivers__lcd1602rgb_dfr_async/: CMakeLists.txt  Kconfig  lcd1602rgb_dfr_async.c  lcd1602rgb_ev.c
firmware/components/drivers__lcd1602rgb_dfr_async/include/: lcd1602rgb_dfr_async.h  lcd1602rgb_ev.h
firmware/components/infrastructure__gpio_onewire/: CMakeLists.txt  gpio_onewire.c
firmware/components/infrastructure__gpio_onewire/include/: infrastructure_onewire.h
firmware/components/infrastructure__idf_clock_port/: CMakeLists.txt  clock_idf.c
firmware/components/infrastructure__idf_gpio_port/: CMakeLists.txt  idf_gpio_port.c
firmware/components/infrastructure__idf_i2c_port/: CMakeLists.txt  idf_i2c_port.c
firmware/components/infrastructure__idf_i2c_port/include/: idf_i2c_port.h
firmware/components/infrastructure__idf_internal_temp/: CMakeLists.txt  idf_internal_temp.c
firmware/components/infrastructure__idf_led_strip/: CMakeLists.txt  idf_component.yml  idf_led_strip.c
firmware/components/infrastructure__idf_nvs_port/: CMakeLists.txt  idf_nvs_port.c
firmware/components/infrastructure__idf_spi_port/: CMakeLists.txt  idf_spi_port.c
firmware/components/infrastructure__idf_timer_port/: CMakeLists.txt  timer_idf.c
firmware/components/infrastructure__idf_uart_port/: CMakeLists.txt  idf_uart_port.c
firmware/components/infrastructure__idf_wdt_port/: CMakeLists.txt  idf_wdt_port.c
firmware/components/infrastructure__logging/: CMakeLists.txt  Kconfig  infra_log_stream.c  logging_cli.c  logging_idf.c
firmware/components/infrastructure__logging/include/: infra_log_rb.h  infra_log_stream.h  logging_cli.h
firmware/components/ports/: CMakeLists.txt
firmware/components/ports/include/: i2c_port.h
firmware/components/ports/include/ports/: clock_port.h  errors.h  gpio_port.h  i2c_port.h  internal_temp_port.h  kv_port.h  led_strip_port.h  log_port.h  onewire_port.h  spi_port.h  timer_port.h  uart_port.h  wdt_port.h
firmware/components/services__ds18b20_ev/: CMakeLists.txt  services_ds18b20_ev.c
firmware/components/services__ds18b20_ev/include/: services_ds18b20_ev.h
firmware/components/services__gpio/: CMakeLists.txt  services_gpio.c
firmware/components/services__gpio/include/: services_gpio.h
firmware/components/services__i2c/: CMakeLists.txt  services_i2c.c
firmware/components/services__i2c/include/: services_i2c.h
firmware/components/services__internal_temp/: CMakeLists.txt  services_internal_temp.c
firmware/components/services__internal_temp/include/: services_internal_temp.h
firmware/components/services__led/: CMakeLists.txt  services_led.c
firmware/components/services__led/include/: services_led.h
firmware/components/services__timer/: CMakeLists.txt  Kconfig  services_timer.c
firmware/components/services__timer/include/: services_timer.h
firmware/components/services__uart/: CMakeLists.txt  services_uart.c
firmware/components/services__uart/include/: services_uart.h
firmware/docs/: architecture.md
firmware/projects/demo_ds18b20_ev/: CMakeLists.txt  sdkconfig.defaults
firmware/projects/demo_ds18b20_ev/main/: CMakeLists.txt  Kconfig.projbuild  main.c  sdkconfig.defaults
firmware/projects/demo_hello_ev/: CMakeLists.txt
firmware/projects/demo_hello_ev/main/: main.c  sdkconfig.defaults
firmware/projects/demo_lcd_rgb/: CMakeLists.txt  sdkconfig.console.uart.defaults  sdkconfig.console.usb.defaults  sdkconfig.defaults  sdkconfig.esp32c3.defaults  sdkconfig.esp32c6.defaults  sdkconfig.esp32h2.defaults  sdkconfig.esp32s3.defaults
firmware/projects/demo_lcd_rgb/main/: CMakeLists.txt  Kconfig.projbuild  main.c
firmware/scripts/: gen-docs.sh
scripts/: build-docker.sh  build.sh  common.env.sh  devshell.sh  doctor.sh  find-port.sh  flash-monitor.sh  gen-docs.sh  idf.sh  init.sh  menuconfig.sh  monitor.sh
